third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/control_flow/loop_after_loop.exp
script {
    entry fun <SELF>_0() {
        loop continue
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ loop_after_loop.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
